[package]
name = "aggregator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.18"
futures-util = "0.3.18"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"
tokio = {version = "1.14.0", features = ["full"]}
uuid = {version = "0.8.2", features = ["serde"]}
warp = "0.3.2"
diesel = { version = "1.4.4", features = ["postgres", "uuidv07"] }
dotenv = "0.15.0"
serde_with = "1.11.0"
