[package]
name = "summits-aggregator"
version = "0.0.1"
authors = ["Felix Niemeyer<niemeyer.felix@gmail.com>"]
publish = false
rust-version = "1.58.1"
edition = "2021"

[dependencies]
actix = "^0.11.0-beta.2"

actix-web = "4.0.0-beta.6" 

clap = "3.0.0-beta.1"
openssl-probe = "0.1.2"
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["full"] }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
anyhow = "1.0"

futures = "0.3.18"
futures-util = "0.3.18"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
serde = {version = "1.0.130", features = ["derive"]}

uuid = {version = "0.8.2", features = ["serde"]}
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2"] }
dotenv = "0.15.0"
serde_with = "1.11.0"

near-indexer = { path = "../../../chain/indexer" }
bytes = "1.1.0"
futures-core = "0.3.7"

actix-http = "3.0.0-beta.6"
bytestring = "1.0.0"
pin-project-lite = "0.2.0"
actix-codec = "0.4.0"

env_logger = "0.8"

